chrome/browser/chromeos/login/ui/oobe_ui_dialog_delegate.h
@@ -18,9 +18,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "chrome/browser/ui/ash/tablet_mode_client_observer.h"
 #include "chrome/browser/ui/chrome_web_modal_dialog_manager_delegate.h"
 #include "components/web_modal/web_contents_modal_dialog_host.h"
-#include "content/public/browser/web_contents_delegate.h"
 #include "ui/display/display_observer.h"
-#include "ui/views/controls/webview/unhandled_keyboard_event_handler.h"
 #include "ui/web_dialogs/web_dialog_delegate.h"
 
 class TabletModeClient;
@@ -59,7 +57,6 @@ class CaptivePortalDialogDelegate;
 class OobeUIDialogDelegate : public display::DisplayObserver,
                              public TabletModeClientObserver,
                              public ui::WebDialogDelegate,
-                             public content::WebContentsDelegate,
                              public ChromeKeyboardControllerClient::Observer,
                              public CaptivePortalWindowProxy::Observer {
  public:
@@ -92,12 +89,6 @@ class OobeUIDialogDelegate : public display::DisplayObserver,
   void UpdateSizeAndPosition(int width, int height);
   OobeUI* GetOobeUI() const;
   gfx::NativeWindow GetNativeWindow() const;
-
-  // content::WebContentsDelegate:
-  bool TakeFocus(content::WebContents* source, bool reverse) override;
-  bool HandleKeyboardEvent(
-      content::WebContents* source,
-      const content::NativeWebKeyboardEvent& event) override;
 
  private:
   // display::DisplayObserver:
@@ -154,8 +145,6 @@ class OobeUIDialogDelegate : public display::DisplayObserver,
 
   std::map<ui::Accelerator, std::string> accel_map_;
   ash::mojom::OobeDialogState state_ = ash::mojom::OobeDialogState::HIDDEN;
-
-  views::UnhandledKeyboardEventHandler unhandled_keyboard_event_handler_;
 
   // Whether the captive portal screen should be shown the next time the Gaia
   // dialog is opened.
